public/css/styles.css
html {
  min-height: 100%;
  position: relative;
}

.container-fluid {
  padding-top: 70px;
  padding-bottom: 70px;
}

.navbar {
  padding-top: 10px;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  font-size: 12px;
  letter-spacing: 5px;
  background-color: forestgreen;
}

/* Style for blog subtitle */
.navbar-brand {
  color: white !important;
}

.navbar-nav li a {
  color: white !important;
  font-weight: bold !important;
}

/* Style for navbar links on hover */
.navbar-nav li a:hover {
  color: black !important;
}

.card {
  background-color: white;
  border: 1px solid lightgray;
  padding: 20px;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  /* Optional: Add a subtle shadow effect */
}


/* button styling css */

.vertical-spacing {
  height: 20px;
  /* Adjust the height value as needed */
}

/* styles.css */

/* Add margin-bottom to the buttons */
.btn-space {
  margin-bottom: 25px;
  /* Adjust this value to control the spacing */
}

/* Customize button appearance */
.btn-custom {
  padding: 20px;
  /* Adjust this value to make the buttons thicker */
  font-size: 18px;
  /* Adjust this value to change text size */
  font-weight: bold;
}

/* TEXT INPUT AREA */

.grey-input {
  background-color: #C5C6D0;
}



/* Style for home page carousel */
.carousel-slideshow {
  width: 100%;
}

@keyframes display {
  0% {
    transform: translateX(200px);
    opacity: 0;
  }

  10% {
    transform: translateX(0);
    opacity: 1;
  }

  20% {
    transform: translateX(0);
    opacity: 1;
  }

  30% {
    transform: translateX(-200px);
    opacity: 0;
  }

  100% {
    transform: translateX(-200px);
    opacity: 0;
  }
}

.carousel-slideshow {
  position: relative;
  width: 100%;
  margin-top: 15px;
}

.carousel-slideshow>img {
  position: absolute;
  top: 0;
  opacity: 0;
  animation: display 10s infinite;
}

.carousel-slideshow>img:nth-child(2) {
  animation-delay: 2s;
}

.carousel-slideshow>img:nth-child(3) {
  animation-delay: 4s;
}

.carousel-slideshow>img:nth-child(4) {
  animation-delay: 6s;
}

.carousel-slideshow>img:nth-child(5) {
  animation-delay: 8s;
}

/*Style for home page article*/
.articles {
  position: relative;
  padding-top: 640px;
}

.articles>h1 {
  font-family: 'Courier New', monospace;
  font-weight: 700;
}

.article-img1 {
  position: relative;
  width: 500px;
  display: block;
  margin-right: auto;
  border: 10px solid #228B22;
}

.article-img2 {
  position: relative;
  width: 500px;
  display: block;
  margin-right: auto;
  border: 10px solid #228B22;
}

.article-img3 {
  position: relative;
  width: 500px;
  display: block;
  margin-right: auto;
  border: 10px solid #228B22;
}

.card {
  background-color: white;
  border: 1px solid lightgray;
  padding: 20px;
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  /* Optional: Add a subtle shadow effect */
}

/* footer sytles */

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: #212329;
}

.footer p {
  margin-top: 25px;
  font-size: 12px;
  color: #fff;
}

.footer h2 {
  color: grey;
  font-family: 'Strait', sans-serif;
  font-weight: bold;

}

.footer-column h2 {
  margin-left: 5%;
}

.footer-column a {
  color: white;
  display: block;
  margin-bottom: 5px;
  /* Added margin to separate the links */
  text-decoration: none;
  /* Remove underline from links */
  margin-left: 5%;
}

.footer-heading a:hover {
  color: lightgreen;
  transition: 0.3s ease-out;
}

.footer-copyright {
  text-align: center;
}

.footer-padding {
  padding-bottom: 60px;
}

